# orchestrator

./: .env.docker.example  .env.example  .gitignore  AGENTIC_STORAGE.md  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  PHASE1_SUMMARY.md  PHASE2A_SUMMARY.md  README.md  README_QUICK_START.md  WORKFLOW.md  alembic.ini  dev.sh  docker-compose.yml  dockerfile  fix_db_constraint.py  orchestrator.db.backup  orchestrator.db.old  package-lock.json  package.json  prod.sh  pyproject.toml  q  stop_dev.sh  test_phase1_basic.py  test_phase2a_complete.py  test_websocket_connection.py
agents/: embeddings.py  executor.py  handlers.py  planner.py  schemas.py  tools.py  tools_context.py  writer.py
agents_v2/: __init__.py  approval.py  backlog_agent.py  context_loader.py  conversation_agent.py  document_agent.py  graph.py  integration_agent.py  intent_classifier.py  planner_agent.py  router.py  state.py  streaming.py  workflow_executor.py  writer_agent.py
alembic/: env.py  script.py.mako
api/: approvals.py  auth.py  main.py  orchestrator.py  ws.back2.py  ws.backup.py  ws.py  ws_langgraph.py
backend/: .env
config/: __init__.py  redis.py
frontend/: .env.local  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  test-proxy.js  vitest.config.ts
langchain_openai/: __init__.py
langgraph/: graph.py
logs/: app-20250903.jsonl
orchestrator/: agent_response.py  conversation_memory.py  core_loop.py  crud.py  doc_processing.py  embedding_service.py  events.py  external_info.py  intents.py  jsonl_loader.py  logging_utils.py  models.py  prompt_loader.py  run_registry.py  settings.py  stream.py  text_chunking.py
prompts/: feature_generation.yaml  features_from_excerpts.yaml  tool_system_prompt.yaml
scripts/: verify_schema.py
tests/: conftest.py  test_agent_handler.py  test_agent_response.py  test_agent_run.py  test_agents_embeddings.py  test_agents_v2_complete.py  test_api.py  test_auth.py  test_chat.py  test_chat_endpoint.py  test_chat_intents.py  test_chat_items.py  test_confirm_gate.py  test_conversation_agent.py  test_conversation_memory.py  test_core_loop.py  test_cors.py  test_delete_item_validation.py  test_dialogue_policy.py  test_doc_processing.py  test_document_api.py  test_document_tools.py  test_documents.py  test_draft_features_from_matches.py  test_e2e.py  test_embedding_api.py  test_embedding_service.py  test_executor.py  test_executor_tools.py  test_external_info.py  test_health.py  test_items.py  (+41 more)
(+208 files in other folders)
